force-app/main/default/objects/Abastecimento__c/Abastecimento__c.object-meta.xml
<CustomObject>
    <label>Abastecimento</label>
    <nameField>
        <displayFormat>Abast-{00000}</displayFormat>
        <label>Abastecimento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Abastecimentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>