force-app/main/default/objects/Abastecimento__c/fields/DataAbastecimento__c.field-meta.xml
<CustomField>
    <fullName>DataAbastecimento__c</fullName>
    <label>Data do abastecimento</label>
    <type>Date</type>
</CustomField>