force-app/main/default/objects/Abastecimento__c/fields/dataVoo__c.field-meta.xml
<CustomField>
    <fullName>dataVoo__c</fullName>
    <formula>Trecho__r.Voo__r.DataVoo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data do voo</label>
    <type>Date</type>
</CustomField>