force-app/main/default/objects/Abastecimento__c/fields/FornecedorCombustivel__c.field-meta.xml
<CustomField>
    <fullName>FornecedorCombustivel__c</fullName>
    <label>Fornecedor de Combustível</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>BR Aviation</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Shell</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>BETA</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Luz do Oriente</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Caribbean Aviation</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>RDC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>