force-app/main/default/objects/Abastecimento__c/fields/Moeda__c.field-meta.xml
<CustomField>
    <fullName>Moeda__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Moeda</label>
    <referenceTo>Moeda__c</referenceTo>
    <relationshipLabel>Abastecimentos</relationshipLabel>
    <relationshipName>Abastecimentos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>