force-app/main/default/objects/Abastecimento__c/fields/Motivo_do_Abastecimento__c.field-meta.xml
<CustomField>
    <fullName>Motivo_do_Abastecimento__c</fullName>
    <label>Motivo do Abastecimento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-fuelling</fullName>
            </value>
            <value>
                <fullName>Post-fuelling</fullName>
            </value>
            <value>
                <fullName>Fuel supplier issues</fullName>
            </value>
            <value>
                <fullName>Maintenance issues</fullName>
            </value>
            <value>
                <fullName>Additional route legs to cover</fullName>
            </value>
            <value>
                <fullName>Fuel top-up to avoid fueling offshore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>