force-app/main/default/objects/Abastecimento__c/fields/QuantidadeCobrada__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeCobrada__c</fullName>
    <formula>((Quantidade__c * ValorUnitario__c ) - ValorNaoReembolsavel__c)/ ValorUnitario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade Cobrada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>