force-app/main/default/objects/Abastecimento__c/fields/QuantidadeNaoCobrada__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeNaoCobrada__c</fullName>
    <formula>ValorNaoReembolsavel__c / ValorUnitario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade Não Cobrada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>