force-app/main/default/objects/Abastecimento__c/fields/ReciboAnexo__c.field-meta.xml
<CustomField>
    <fullName>ReciboAnexo__c</fullName>
    <label>ReciboAnexo</label>
    <type>Url</type>
</CustomField>