force-app/main/default/objects/Abastecimento__c/fields/Recibos__c.field-meta.xml
<CustomField>
    <fullName>Recibos__c</fullName>
    <label>Recibo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>