force-app/main/default/objects/Abastecimento__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <formula>(Quantidade__c * ValorUnitario__c) -  ValorNaoReembolsavel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>