force-app/main/default/objects/Abastecimento__c/fields/Tanque__c.field-meta.xml
<CustomField>
    <fullName>Tanque__c</fullName>
    <label>Tanque</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tanque</valueSetName>
    </valueSet>
</CustomField>