force-app/main/default/objects/Abastecimento__c/fields/Trecho__c.field-meta.xml
<CustomField>
    <fullName>Trecho__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trecho</label>
    <referenceTo>Trecho__c</referenceTo>
    <relationshipLabel>Abastecimentos</relationshipLabel>
    <relationshipName>Abastecimentos</relationshipName>
    <type>Lookup</type>
</CustomField>