force-app/main/default/objects/Abastecimento__c/fields/ValorNaoReembolsavel__c.field-meta.xml
<CustomField>
    <fullName>ValorNaoReembolsavel__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Valor não reembolsável</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>