force-app/main/default/objects/Abastecimento__c/fields/ValorUnitario__c.field-meta.xml
<CustomField>
    <fullName>ValorUnitario__c</fullName>
    <label>Valor unitário</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>