force-app/main/default/objects/Abastecimento__c/fields/ValorUnitarioFormat__c.field-meta.xml
<CustomField>
    <fullName>ValorUnitarioFormat__c</fullName>
    <formula>Moeda__r.ISOCode__c  &amp; &apos; &apos; &amp;
IF(ValorUnitario__c &lt; 0, &apos;-&apos;, &apos;&apos;) &amp;
IF(
(ABS(ValorUnitario__c)) &gt;= 1000000,
TEXT(FLOOR((ABS(ValorUnitario__c)) / 1000000)) &amp; &quot;.&quot;,
&quot;&quot;) &amp;
IF(
(ABS(ValorUnitario__c)) &gt;= 1000,
RIGHT(TEXT(FLOOR((ABS(ValorUnitario__c)) / 1000)), 3) &amp; &quot;.&quot;,
&quot;&quot;) &amp;
RIGHT(TEXT(FLOOR((ABS(ValorUnitario__c)))), 3) &amp; &quot;,&quot; &amp;
IF(
MOD((ABS(ValorUnitario__c)) , 1) * 100 &lt; 10,
&quot;0&quot; &amp; TEXT(ROUND(MOD((ABS(ValorUnitario__c)) , 1), 2) * 100),
TEXT(MIN(ROUND(MOD((ABS(ValorUnitario__c)) , 1), 2) * 100, 99))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValorUnitarioFormat</label>
    <type>Text</type>
</CustomField>