force-app/main/default/objects/Abastecimento__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Moeda__c</columns>
    <columns>DataAbastecimento__c</columns>
    <columns>dataVoo__c</columns>
    <columns>FornecedorCombustivel__c</columns>
    <columns>Local__c</columns>
    <columns>Quantidade__c</columns>
    <columns>Tanque__c</columns>
    <columns>Status__c</columns>
    <columns>Subtotal__c</columns>
    <columns>ValorNaoReembolsavel__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>